@startuml

allow_mixing

package "API Layer" {
    class BookingController {
        +Book(User user, int courtNumber, DateTime slotTime)
        +GetBookingHistory(User user)
    }
}

package "Service / Scraper Layer" {
    interface IBookingScraper {
        +Task<bool> LoginAsync(User user)
        +Task<BookingResult> BookAnyAvailableAsync(User user, BookingDate date, List<BookingTimeSlot> preferredSlots)
    }

    class BookingScraper {
        ..implements IBookingScraper..
    }

    class BookingResult {
        +bool Success
        +string Message
        +Booking? Booking
    }

    class ScraperLog {
        +Guid LogId
        +DateTime Timestamp
        +string Message
        +string? StackTrace
    }
}

package "Domain Layer" {
    class User {
        +Guid UserId
        +string Username
        +string PasswordHash
        +BookingHistory BookingHistory
    }

    class BookingHistory {
        +Guid BookingHistoryId
        +List<Booking> Bookings
    }

    class Booking {
        +Guid BookingId
        +Guid UserId
        +int CourtNumber
        +BookingDate BookingDate
        +BookingStatus Status
    }

    class BookingDate {
        +DateOnly Date
        +BookingTimeSlot TimeSlot
    }

    enum BookingTimeSlot {
        T17_30
        T18_30
        T19_00
        T19_30
        T20_30
    }

    enum BookingStatus {
        Pending
        Confirmed
        Failed
    }

    class FailedBookingAttempt {
        +Guid AttemptId
        +Guid UserId
        +int CourtNumber
        +BookingDate BookingDate
        +string ErrorMessage
        +DateTime AttemptedAt
    }

    class PadelCourtTable {
        +List<PadelCourt> Courts
        +string GetIdForCourtAndTime(int courtNumber, TimeSpan time)
        +List<string> GetIdsForTimes(List<TimeSpan> times)
    }

    class PadelCourt {
        +int CourtNumber
        +TimeSpan Duration
        +Dictionary<TimeSpan,string> TimeSlotIds
    }
}

package "Database Layer (SQL Server / Cloud DB)" {
    ' Represent tables stored in the database
    User -- BookingHistory
    BookingHistory -- Booking
    User -- FailedBookingAttempt
}

' Relationships
BookingController --> IBookingScraper
BookingScraper ..|> IBookingScraper
PadelCourtTable "1" --> "*" PadelCourt

' Domain relationships
Booking --> BookingDate
BookingDate --> BookingTimeSlot
FailedBookingAttempt --> BookingDate

' Logging Relationship
BookingScraper --> ScraperLog : writes logs

' External System
rectangle "Third-Party Booking Website" as ThirdPartyWeb #LightBlue

' Interaction
BookingScraper --> ThirdPartyWeb : login / scrape / book

@enduml
